[RELEASE-01] Beta 1: Foundations of the Voxel Engine

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,20 @@
 build/
-CMakeFiles/
 .cache/
-compile_commands.json
+bin/
+
+CMakeFiles/
 CMakeCache.txt
 cmake_install.cmake
+compile_commands.json
+*.cmake
+
 MineGame
+MineGame.exe
+*.pdb
+*.ilk
+
+.clangd/
+.vscode/
+.idea/
+
+*.log
